--- a/app.css
+++ b/app.css
@@ -1,21 +1,29 @@
 body {
     text-align: center;
-    background-color: #232323;
-    color: white; 
+    color: grey; 
     text-transform: uppercase;
     font-family: "Monserrat", "Avenir";
     font-weight: normal;
   }
+
+  .container {
+    margin: 0 auto;
+    height: 400px;
+    width: 500px;
+    padding: 100px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    border-radius: 10px;
+    animation-name: fade-in;
+    animation-duration: 2s;
+  }
   
   h1 {
-    background-color: #acb5c4;
     margin: 0;
     padding: 20px 0;
     line-height: 1.1;
   }
   
   h2 {
-    background-color: #acb5c4;
     margin: 0;
     padding: 0 0 20px 0;
     line-height: 1.1;
@@ -40,8 +48,73 @@ body {
   
   .weatherContainer {
     margin: 0 auto;
-    width: 400px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     
-    
+  }
+
+  .hotWeather{
+    background: linear-gradient(to left, rgb(160, 82, 82), rgb(92, 20, 20))
+  }
+
+  .coldWeather{
+    background: linear-gradient(to left, rgb(117, 117, 247), rgb(34, 34, 85))
+  }
+
+  .goodWeather{
+    background: linear-gradient(to left, rgb(145, 241, 145), rgb(24, 56, 24))
+  }
+
+  .hideThis{
+    display: none;
+  }
+
+  #dot1{
+    position: relative;
+    animation-name: bounce;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+
+#dot2{
+    position: relative;
+    animation-delay: 0.3s;
+    animation-name: bounce;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+
+#dot3{
+    position: relative;
+    animation-delay: 0.6s;
+    animation-name: bounce;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+
+  @keyframes bounce {
+    0% {
+      transform: scale(1);
+      bottom: 0px;
+    } 
+    50% {
+      transform: scale(2);
+      bottom: 10px;
+    }
+    80%{
+      bottom: 0px;
+    }
+    100%{
+      transform: scale(1);
+      bottom: 0px;
+    }
+  }
+
+  @keyframes fade-in {
+    0%{
+      opacity: 0;
+    }
+    100%{
+      opacity: 1;
+    }
   }
